[package]
name = "wblockdsp"
version = "0.1.0"
authors = ["Weird Constructor <weirdconstructor@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"
description  = "Specialized WLambda DSP JIT via Cranelift"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.86.1"
cranelift-module = "0.86.1"
cranelift-jit = "0.86.1"
cranelift-codegen = "0.86.1"
cranelift-native = "0.86.1"
wlambda = { git = "https://github.com/WeirdConstructor/WLambda.git" }
